Overflow fixes for footer

--- a/src/css/cover.css
+++ b/src/css/cover.css
@@ -246,6 +246,7 @@ hr {
   padding: 0 0 0 0;
   height: 5em;
   margin-top: -5em;
+  overflow: hidden;
 
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, .15) inset;
 }
@@ -254,7 +255,7 @@ hr {
   position: relative;
   bottom: 0;
   margin: 0;
-  padding: 2.5em 0 1em 0;
+  padding: 2em 0 1.5em 0;
 }
 
 .license > a {
@@ -275,11 +276,6 @@ hr {
   .masthead {
     position: relative;
     top: 0;
-  }
-
-  .mastfoot {
-    position: relative;
-    bottom: 0;
   }
 
   /* Start the vertical centering */
